--- a/homepage.html
+++ b/homepage.html
@@ -5,5 +5,5 @@
 <li><a href="https://theescapeartist.me/">The Escape Artist</a></li>
 <li><a href="https://indeedably.com/">Indeedably</a></li>
 <li><a href="https://seths.blog/">Seth Godin</a></li>
-<li><a href=""> </a></li>
+<li><a href="https://sovereignquest.com/#curation">Sovereign Quest</a></li>
 </ul>
